welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:60: error: not found: value j
    if(j!=2)avance();
       ^